# hairr

./: .gitignore  Cargo.toml  README.md  prd.md
apps/app-store/: Cargo.toml
apps/app-store/src/: main.rs
compatibility/: Cargo.toml
compatibility/src/: lib.rs
drivers/reference-driver/: Cargo.toml
drivers/reference-driver/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
libs/capability/: Cargo.toml
libs/capability/src/: lib.rs
libs/filesystem/: Cargo.toml
libs/filesystem/src/: lib.rs
libs/hal/: Cargo.toml
libs/hal/src/: lib.rs
libs/ipc/: Cargo.toml
libs/ipc/src/: lib.rs
libs/memory-manager/: Cargo.toml
libs/memory-manager/src/: lib.rs
libs/system-utils/: Cargo.toml
libs/system-utils/src/: lib.rs
pkg-manager/: Cargo.toml
pkg-manager/src/: main.rs
services/ai-scheduler/: Cargo.toml
services/ai-scheduler/src/: lib.rs
services/device-manager/: Cargo.toml
services/device-manager/src/: lib.rs
services/keystore/: Cargo.toml
services/keystore/src/: lib.rs
shell/: Cargo.toml
shell/src/: main.rs
